#VERSION 0.7.97#

*  Peak_View_Helper deleted, no more usefull since Peak_View_Helpers accomplish the same.
   Important change: View Helpers don't have to extends anymore this class.

*  Peak_Controller_Helpers have access to others helpers

*  Peak_Controller > no more need to init a controller helper before using it.

*  Peak_Helpers > added method exists()

*  added Zend/Loader.php since Zend/Reflection/Docblock classes require this file.

*  View helpers new class name prefix: 'View_Helper_'
   Controller helpers new class name prefix: 'Controller_Helper_'
   Those changes standardize class name for application and library helpers.

*  depracated Peak_Utils class 

*  Peak_Controller_Helpers now support native peak library controller helper folder too.

*  Peak_Exception > added constant ERR_HELPER_NOT_FOUND

*  added Peak_Helpers abstract class > Peak_View_Helpers and Peak_Controller_Helpers now extends this class of instead
                                       duplicating the code for almost the same behavior. Extends this class
                                       to create your own helpers objects container with multiple paths.

#VERSION 0.7.96#

*  Peak_Core > added method isInternalController(), updated run() method from Peak_Application to use this. 

*  Peak_Application > fix method run() to set router variables instead of using getRequestUri() 
                      when using $flush_request. 

*  Peak_Router > fix method getRequestUri() > app default controller was called when using fake rewrited url
                 ending by .php extension witch is not good. Now it throw exception ERR_ROUTER_URI_NOT_FOUND

*  Peak_Exception > added constant ERR_ROUTER_URI_NOT_FOUND

*  added Peak_View_Helper_Redirect > manage url and controller http header + status code redirection

*  deprecated constants APP_LANG, and Peak_Lang class is no more loaded each time in Peak_Application
